apps/echo/production/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo1
  namespace: echo
spec:
  parentRefs:
    - name: gateway-dkroesen
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - "echo1.dkroesen.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo1
          port: 80
