apps/echo/production/route_api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: echo
spec:
  parentRefs:
    - name: gateway-dkroesen
      namespace: nginx-gateway
      sectionName: https-api
  hostnames:
    - "api.dkroesen.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          port: 80
